# KeepGaining

./: .copilot_instructions.md  .env.prod.example  .gitignore  PERPLEXITY_IMPLEMENTATION_GUIDE.md  PRODUCTION_GUIDE.md  README.md  SETUP_GUIDE.md  check_counts.py  check_counts_debug.py  check_data.py  check_instruments.py  check_options_debug.py  check_types.py  check_underlying.py  docker-compose.prod.yml  docker-compose.yml  install_timescaledb.ps1  nifty_debug.txt  redis.conf  start_all.bat  start_backend.bat  start_frontend.bat  types_debug.txt  upstox_types.txt  verification_result.txt  verify_backend.py
backend/: BANKNIFTY_expiries.txt  Dockerfile  Dockerfile.prod  FINNIFTY_expiries.txt  NIFTY_expiries.txt  alembic.ini  backtest_exit_1530_1766207803.csv  comparison_results.txt  daily_automation.bat  expiries.txt  forensic_output.txt  loss_analysis.txt  pyproject.toml  requirements.txt  test_comet_integration.py  test_comet_perplexity.py  test_json_parse.py
backend/alembic/: env.py
backend/api/: strategy_api.py
backend/app/: main.py
backend/archive/: README.md  add_broker.py  create_tables.py  exchange_code.py  fix_indicator_file.txt  test_upstox.py  volume_rocket_entry_09_16_plus.csv  volume_rocket_fixed_entry.csv  volume_rocket_options.csv  volume_rocket_results.csv
backend/backtest_results/: sector_momentum_results.md
backend/config/: comet_config.yaml
backend/data/: all_fno_symbols.txt  bt_dec_none.json  bt_dec_rsi_ema.json  bt_dec_supertrend.json  cluster1_october_fast.csv  cluster1_october_fast_summary.json  comprehensive_indicator_analysis.json  (+14 more)
(+665 files in other folders)
